[package]
name = "hanzo-fs"
description = "Hanzo AI - Filesystem Library"
license = "MIT"
version = "1.1.21"
edition = "2021"
authors = ["Nico Arqueros <nico@hanzo.ai>"]
repository = "https://github.com/hanzonet/fs"
homepage = "https://hanzo.ai"

[dependencies]
scraper = "0.19.0"
urlencoding = "2.1.0"
walkdir = "2.5.0"

[dependencies.hanzo-runtime]
version = "1.1.13"
[dependencies.tempfile]
version = "3.19"

[dependencies.os_path]
version = "0.8.0"

[dependencies.regex]
version = "1"

[dependencies.utoipa]
version = "4.2.3"

[dependencies.csv]
version = "1.1.6"

[dependencies.futures]
version = "0.3.30"

[dependencies.keyphrases]
version = "0.3.3"

[dependencies.async-trait]
version = "0.1.74"

[dependencies.lazy_static]
version = "1.5.0"

[dependencies.reqwest]
version = "0.11.27"

[dependencies.thiserror]
version = "2.0.3"

[dependencies.comrak]
version = "0.22.0"
default-features = true

[dependencies.chrono]
version = "0.4"

[dependencies.tokio]
version = "1.36"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"]

[dependencies.blake3]
version = "1.2.0"

[dependencies.rand]
version = "=0.8.5"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.bincode]
version = "1.3.3"

[dependencies.hanzo-db-sqlite]
version = "1.1.13"
[dependencies.hanzo-embed]
version = "1.1.13"
[dependencies.hanzo-messages]
version = "1.1.13"
[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dev-dependencies]
serial_test = "0.5"

[dev-dependencies.tempfile]
version = "3.19"
[[test]]
name = "pdf_parsing_tests"
path = "tests/pdf_parsing_tests.rs"
required-features = ["static-pdf-parser"]

# [[test]]
# name = "vector_resource_tests"
# path = "tests/vector_resource_tests.rs"
